# SproutGit

./: .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PR_DESCRIPTION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  test-playwright.cjs  tsconfig.json  turbo.json  vite.config.js  vitest.config.ts
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  deploy-website.yml
.husky/: pre-commit
.husky/_/: pre-commit
app/: electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
docs/: architecture.md  benchmark-repository-strategy.md  branch-worktree-policy.md  design-review-and-screen-plan.md  docs-platform-plan.md  e2e-test-process.md  index.md  requirements.md  security-audit.md  tauri-playwright-adapter-cheatsheet.md  worktree-hooks.md
e2e/: fixtures.ts  global.setup.mjs  helpers.ts  package.json  playwright.built.config.ts  playwright.config.ts  tsconfig.json  wdio.conf.ts
e2e/helpers/: benchmark-repos.ts  fixtures.ts  screenshots.ts  ui.ts
e2e/specs/: canary-repos.spec.ts  (+6 more)
logos/: logo.af
scripts/: check-doc-drift.mjs  cleanup-rust-targets.mjs  patch-electron-plist.mjs  run-e2e-isolated.mjs  setup-playwright.mjs
src/: app.css  app.d.ts  app.html
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.e2e.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/config/: 001_initial_schema.sql
src-tauri/migrations/workspace/: 001_initial_schema.sql  002_hook_keep_open_on_completion.sql  003_hook_execution_preferences.sql  004_worktree_provenance_and_nested_repo_rules.sql  006_hook_switch_once_per_session.sql  007_hook_switch_auto_run_contexts.sql
src-tauri/src/: config.rs  db.rs  diff.rs  editor.rs  git.rs  github.rs  helpers.rs  hooks.rs  lib.rs  main.rs  recent_docs.rs  terminal.rs  watcher.rs  workspace.rs  worktree_metadata.rs
src-tauri/src/git/: diff.rs  helpers.rs  mod.rs  operations.rs  staging.rs
tests/: path-utils.test.ts  paths.test.ts  worktree-create-sort.test.ts
website/: package.json  pnpm-lock.yaml
(+90 files in other folders)
