[package]
name = "sproutgit"
version = "0.1.0"
description = "SproutGit: a worktree-first Git desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sproutgit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "SproutGit"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
tauri-plugin-dialog = "2.7.0"
reqwest = { version = "0.13", features = ["json", "form", "query"] }
dunce = "1"
sea-orm = { version = "1.1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
tokio = { version = "1", features = ["process", "io-util", "time", "rt"] }
keyring = "3"
notify-debouncer-mini = "0.7"
portable-pty = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSDocumentController"] }
objc2-foundation = { version = "0.3", features = ["NSURL", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_UI_Shell", "Win32_System_Com"] }

[dev-dependencies]
tempfile = "3"

[lints.clippy]
# Security and common mistakes
unwrap_used = "warn"
expect_used = "warn"

# Code quality
suspicious = "warn"
complexity = "warn"
perf = "warn"

# Style (informational, not enforced)
style = "warn"

# Consistency
inconsistent_struct_constructor = "warn"
manual_string_new = "warn"
trivially_copy_pass_by_ref = "warn"

[lints.rust]
# Warn on unsafe code
unsafe_code = "warn"  # Pragmatic for internal code
